--- a/templates/calculations/top.html
+++ b/templates/calculations/top.html
@@ -1,44 +1,34 @@
 {% extends "layouts/default.html" %}
 
+{% block additional_css %}
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/top.css' %}" type="text/css" />
+{% endblock %}
+
 {% block content %}
-<header class="header text_center">
-    <div class="container">
-        <a href="{% url 'calculations:top' %}"><h2 class="title">PRO-PAR</h2></a>
+
+<main  class="container">
+
+    <img class="parking_img" src="{% static 'img/parking_img.png' %}"  alt="">
+    <div class="txt_wrapper">
+        <p class="main_txt txt_center">パーキングの利用時間を入力してください。</p>
+        <p class="sub_txt txt_center">※はりまや町・南はりまや町のパーキングのみ対応しております。</p>
     </div>
-</header>
 
-<h1>{{ title }}</h1>
-
-<p>パーキングの利用時間を入力してください。</p>
-
-<form action="" class="form" method="post">
-    {% csrf_token %}
-    <table class="table text_center">
-        <tr class="row">
-            <th>
-                <label for="entry_time">IN</label>
-            </th>
-            <td>
-                <input class="entry_datetime_form" type="date" value="{{ today_date }}" name=entry_date required />
-            </td>
-            <td>
-                <input class="entry_datetime_form" type="time" value="{{ today_time }}" name="entry_time" id="entry_time" required />
-            </td>
-        </tr>
-        <tr class="row">
-            <th>
-                <label for="leaving_time">OUT</label>
-            </th>
-            <td>
-                <input class="leaving_datetime_form" type="date" name="leaving_date" value="{{ tomorrow_date }}" required />
-            </td>
-            <td>
-                <input class="leaving_datetime_form" type="time" name="leaving_time" value="08:00" step="1800" id="leaving_time" required />
-            </td>
-        </tr>
-
-    </table>
-    <input class="btn" type="submit" value="SEARCH »"/>
-</form>
-    
+    <form action="{% url 'calculations:list' %}" class="form txt_center" method="post">
+        {% csrf_token %}
+        <p class="label"><label for="entry_time">IN</label></p>
+        <div class="input_form_wrapper">
+            <input class="entry_datetime_form" type="date" value="{{ today_date }}" name=entry_date required />
+            <input class="entry_datetime_form" type="time" value="{{ today_time }}" name="entry_time" id="entry_time" required />    
+        </div>
+        <p class="label"><label for="leaving_time">OUT</label></p>
+        <div class="input_form_wrapper flex">
+            <input class="leaving_datetime_form" type="date" name="leaving_date" value="{{ tomorrow_date }}" required />
+            <input class="leaving_datetime_form" type="time" name="leaving_time" value="08:00" step="1800" id="leaving_time" required />
+        </div>
+        
+        <input class="btn" type="submit" value="料金を調べる »"/>
+    </form>
+</main> 
 {% endblock %}
