--- a/static/css/top.css
+++ b/static/css/top.css
@@ -20,6 +20,10 @@
 }
 
 /* フォームとラベルとボタン */
+input[type="submit"] {
+    -webkit-appearance: none;
+    border-radius: 0;
+}
 .form {
     width: 90%;
     margin:0 auto;
