--- a/templates/calculations/list.html
+++ b/templates/calculations/list.html
@@ -9,6 +9,7 @@
 
 <main>
     <div class="container">
+        <input class="btn" type="button" value="計算をやり直す »" onClick="location.href='/'"/>
         {% for parking in parkings %}
         <div class="parking_wrapper">
             
@@ -32,9 +33,6 @@
 
     </div>
 </main>
-
-
-    
 
 {% endblock %}
 
