--- a/static/css/top.css
+++ b/static/css/top.css
@@ -1,5 +1,5 @@
 
-.parking_img {
+.parking_top_img {
     width: 70%;
     margin:0 auto;
     margin-bottom: 20px;
@@ -12,7 +12,7 @@
 }
 .main_txt {
     margin-bottom: 20px;
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-weight: bold;
 }
 .sub_txt {
