--- a/templates/calculations/list.html
+++ b/templates/calculations/list.html
@@ -7,31 +7,34 @@
 
 {% block content %}
 
-<main>
-    <div class="container">
-        
-        {% for parking in parkings %}
-        <div class="parking_wrapper">
-            
-            <div class="flex">
-                {% if parking.image %}
-                <img class="parking_img" src="{{ parking.image.url }}"  alt="">
-                {% endif %}
-                <ul class="txt-wrapper">
-                    <li>{{ parking.name }}</li>
-                    <li>ゲストハウスから{{ parking.distance }}m</li>
-                    <li>収容台数：{{ parking.number_of_parking_spaces }}台</li>
-                    <li class="price">利用料金 {{ parking.charge }}円</li>
-                </ul>
-            </div>
-            <form action="{% url 'calculations:map' id=parking.id %}" class="form" method="post">
-                {% csrf_token %}
-                <input class="btn" type="submit" value="MAP »"/>
-            </form>
-        </div>
-        {% endfor %}
-
+<main class="container">
+    <img class="parking_top_img" src="{% static 'img/parking_img.png' %}"  alt="">
+    <div class="txt_wrapper">
+        <p class="main_txt txt_center">利用したいパーキングを選択してください。</p>
+        <p class="main_txt txt_center">「MAP」をタップすると経路が表示されます。</p>
     </div>
+    {% for parking in parkings %}
+    <div class="parking_wrapper">
+        
+        <div class="flex">
+            {% if parking.image %}
+            <img class="parking_img" src="{{ parking.image.url }}"  alt="">
+            {% endif %}
+            <ul class="txt-wrapper">
+                <li>{{ parking.name }}</li>
+                <li>ゲストハウスから{{ parking.distance }}m</li>
+                <li>収容台数：{{ parking.number_of_parking_spaces }}台</li>
+                <li class="price">利用料金 {{ parking.charge }}円</li>
+            </ul>
+        </div>
+        <form action="{% url 'calculations:map' id=parking.id %}" class="form" method="post">
+            {% csrf_token %}
+            <input class="btn" type="submit" value="MAP »"/>
+        </form>
+    </div>
+    {% endfor %}
+
+    
 </main>
 
 {% endblock %}
