--- a/templates/calculations/list.html
+++ b/templates/calculations/list.html
@@ -2,7 +2,7 @@
 
 {% block additional_css %}
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/list.css' %}" type="text/css" >
+    <link rel="stylesheet" href="{% static 'css/list.css' %}" type="text/css" media="screen" />
 {% endblock %}
 
 {% block content %}
