--- a/templates/layouts/default.html
+++ b/templates/layouts/default.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PRO-PAR</title>
     <meta name="description" content="コインパーキング料金を自動計算してくれるツールです。">
-    <link rel="stylesheet" href="{% static '/css/reset.css' %}" type="text/css" />
-    <link rel="stylesheet" href="{% static '/css/default.css' %}" type="text/css" />
+    <link rel="stylesheet" href="{% static '/css/reset.css' %}" type="text/css"  media="screen"/>
+    <link rel="stylesheet" href="{% static '/css/default.css' %}" type="text/css"  media="screen"/>
     
     {% block additional_css %}{% endblock %}
 
